--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
                 <nav>
                     <ul>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#portfolios">portfolio</a></li>
-                        <li><a href="#skills">skills</a></li>
-                        <li><a href="#content">content</a></li>
+                        <li><a href="#skill">Skills</a></li>
+                        <li><a href="#riwayat">Riwayat Sekolah</a></li>
+                        <li><a href="#project">Project</a></li>
+                        <li><a href="#media">Social Media</a></li>
                         <li>
                             <a href="/resume.pdf" target="_blank">
                                 <button class="btn">Resume</button>
@@ -57,7 +57,7 @@
      </header>
      <!-- End of Header-->
 
-     <section id="Services">
+     <section id="skills">
         <div class="Services main-container">
             <h3 class="pre-title-service">My Skills</h3>
             <h1 class="section-title Services-title">My Skills</h1>
@@ -93,7 +93,7 @@
      </section>
 
      <!--riwayat sekolah-->
-     <section id="Services">
+     <section id="riwayat">
         <div class="Services main-container">
             <h3 class="pre-title-service">Riwayat Sekolah</h3>
             <h1 class="section-title Services-title">Riwayat Sekolah</h1>
@@ -101,8 +101,7 @@
             <div class="grid-3">
                 <div class="service">
                     <div class="service-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M3 16l-3-10 7.104 4 4.896-8 4.896 8 7.104-4-3 10h-18zm0 2v4h18v-4h-18z"/>
-                        </svg>
+                        <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M24 21h-3l1-3h1l1 3zm-12.976-4.543l8.976-4.575v6.118c-1.007 2.041-5.607 3-8.5 3-3.175 0-7.389-.994-8.5-3v-6.614l8.024 5.071zm11.976.543h-1v-7.26l-10.923 5.568-11.077-7 12-5.308 11 6.231v7.769z"/></svg>
                     </div>
                     <h4>MI</h4>
                     <p>Saya Sekolah Di MI ma'arif cikedung yang ber alamat di cikedung</p>
@@ -111,16 +110,14 @@
 
             <div class="service-2">
                 <div class="service-icon-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M3 18c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm9 0c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm0-16c.552 0 1 .449 1 1s-.448 1-1 1-1-.449-1-1 .448-1 1-1zm0-2c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm9 18c-1.656 0-3 1.343-3 3s1.344 3 3 3 3-1.343 3-3-1.344-3-3-3zm-1.577-1.721l-6.423-5.028v-3.352c-.323.066-.658.101-1 .101s-.677-.035-1-.101v3.352l-6.424 5.028c.695.233 1.323.602 1.844 1.093l5.58-4.372 5.579 4.373c.522-.492 1.15-.861 1.844-1.094z"/>
-                    </svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M24 21h-3l1-3h1l1 3zm-12.976-4.543l8.976-4.575v6.118c-1.007 2.041-5.607 3-8.5 3-3.175 0-7.389-.994-8.5-3v-6.614l8.024 5.071zm11.976.543h-1v-7.26l-10.923 5.568-11.077-7 12-5.308 11 6.231v7.769z"/></svg>
                 </div>
                 <h4>MTs</h4>
                 <p>Saya Sekolah di MTs ma'arif cikedung yang ber alamat di cikedung</p>
             </div>
             <div class="service-3">
                 <div class="service-icon-3">
-                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M12 0c6.623 0 12 5.377 12 12s-5.377 12-12 12-12-5.377-12-12 5.377-12 12-12m2.557 16h-5.115c.546 2.46 1.441 4.114 2.558 5.744 1.194-1.741 2.041-3.41 2.557-5.744m-7.157 0h-4.567c1.236 2.825 3.704 4.972 6.755 5.716-1.048-1.733-1.783-3.658-2.188-5.716m13.767 0h-4.567c-.391 1.988-1.095 3.887-2.175 5.694 3.012-.763 5.517-2.895 6.742-5.694m-14.005-6h-4.962c-.267 1.313-.267 2.685 0 4h4.915c-.119-1.329-.101-2.672.047-4m7.661 0h-5.647c-.165 1.326-.185 2.672-.053 4h5.753c.133-1.328.111-2.673-.053-4m6.977 0h-4.963c.148 1.328.166 2.671.048 4h4.915c.26-1.285.273-2.648 0-4m-12.156-7.729c-3.077.732-5.567 2.886-6.811 5.729h4.653c.435-2.042 1.178-3.985 2.158-5.729m2.355-.048c-1.089 1.77-1.91 3.453-2.463 5.777h4.927c-.534-2.246-1.337-3.948-2.464-5.777m2.368.069c1.013 1.812 1.733 3.76 2.146 5.708h4.654c-1.232-2.816-3.762-4.958-6.8-5.708"/>
-                    </svg>
+                    <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M24 21h-3l1-3h1l1 3zm-12.976-4.543l8.976-4.575v6.118c-1.007 2.041-5.607 3-8.5 3-3.175 0-7.389-.994-8.5-3v-6.614l8.024 5.071zm11.976.543h-1v-7.26l-10.923 5.568-11.077-7 12-5.308 11 6.231v7.769z"/></svg>
                 </div>
                 <h4>SMK</h4>
                 <p>Saya Sekolah Di SMKN 1 Maja yang Ber alamat di maja</p>
@@ -131,7 +128,7 @@
      <!--End riwayat hidup-->
 
      <!--portofolio-->
-     <section id="Portofolios">
+     <section id="Project">
         <div class="Portofolios main-container">
             <h3 class="pre-title-works">My Works</h3>
             <h1 class="section-title">Project</h1>
@@ -212,7 +209,7 @@
                 </p>
      </section>
      <!--End of Portofolio-->
-     <section class="contact" id="contact">
+     <section class="contact" id="media">
         <div class="media main-container">
             <h3 class="pre-title-service">Social Media</h3>
             <h1 class="section-title Services-title">Social Media</h1>
@@ -220,14 +217,14 @@
                 <div class="img-sosial">
                     <img src="/images/instagram.png" alt="instagram">
                     <div class="title-icon">
-                        <a href="">hahahha</a>
+                        <a href="">boxer.jb21</a>
                     </div>
                 </div>
 
                 <div class="img-sosial">
                     <img src="/images/tiktok.png" alt="Tiktok">
                     <div class="title-icon">
-                        <a href="">hahahha</a>
+                        <a href="">fluckyy</a>
                     </div>
                 </div>
             </div>
