--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
                 <nav>
                     <ul>
-                        <li><a href="#skill">Skills</a></li>
+                        <li><a href="#skills">Skills</a></li>
                         <li><a href="#riwayat">Riwayat Sekolah</a></li>
                         <li><a href="#project">Project</a></li>
                         <li><a href="#media">Social Media</a></li>
@@ -128,7 +128,7 @@
      <!--End riwayat hidup-->
 
      <!--portofolio-->
-     <section id="Project">
+     <section id="project">
         <div class="Portofolios main-container">
             <h3 class="pre-title-works">My Works</h3>
             <h1 class="section-title">Project</h1>
